# kerberus

./: .gitignore  README.md  WORKSPACE  WORKSPACE.bazel
.devcontainer/: devcontainer.json
backend/: .gitignore  BUILD.bazel  README.md  manage.py  pyproject.toml
backend/core/: admin.py  collect_vulnerabilities.py  models.py  serializers.py  tasks.py
backend/core/limbo/: routers.py  urls.py  views.py  viewsets.py
backend/core/management/commands/: create_ingest.py  create_project.py
backend/core/migrations/: 0001_initial.py  0002_dependency_total_vulnerabilities_and_more.py  0002_vulnerability_vulnerabilitydependency_and_more.py  0003_alter_dependency_vulnerabilities.py
backend/core/tasks/: clean_vulnerabilities.py  collect_vulnerabilities.py
backend/kerberus/: asgi.py  settings.py  urls.py  wsgi.py
cli/: BUILD.bazel  Cargo.toml  README.md  cargo-bazel-lock.json
cli/src/: main.rs
cli/src/analyzer/: dependencies.rs  mod.rs
cli/src/analyzer/ecosystems/: maven.rs  mod.rs
cli/src/system/: mod.rs
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: Layout.tsx  Main.tsx  ProjectBox.tsx  Sidebar.tsx
frontend/src/components/icons/: Critical.tsx  High.tsx  Low.tsx  Medium.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: _app.tsx  _document.tsx  dashboard.tsx  organizations.tsx  projects.tsx
frontend/src/pages/project/: [name].tsx
frontend/src/styles/: globals.css
